--- a/Pages/2D Animation.html
+++ b/Pages/2D Animation.html
@@ -17,7 +17,7 @@
 
 	  <div class="port_nav_drop"> 
 		<ul>
-			<li><a href="../Home.html"> Home </a></li>
+			<li><a href="../index.html"> Home </a></li>
 			<li><a href="#"> Portfolios </a>
 				<ul class="dropdown">
 					<li> <a href="photos.html"> Photography </a></li>
