--- a/Pages/photos.html
+++ b/Pages/photos.html
@@ -163,7 +163,7 @@
 	  <div class="port_nav_drop"> 
         <!-- Add the ul list  here for the Dropdown Menu-->
 		<ul>
-			<li><a href="../home.html"> Home </a></li>
+			<li><a href="../index.html"> Home </a></li>
 			<li><a href="#"> Portfolios </a>
 				<ul class="dropdown">
 					<li> <a href="photos.html"> Photography </a></li>
