--- a/Pages/video edits.html
+++ b/Pages/video edits.html
@@ -67,7 +67,7 @@
 
 	<div class="port_nav_drop"> 
 		<ul>
-			<li><a href="../Home.html"> Home </a></li>
+			<li><a href="../index.html"> Home </a></li>
 			<li><a href="#"> Portfolios </a>
 				<ul class="dropdown">
 					<li> <a href="photos.html"> Photography </a></li>
