"video edit.html" link fix

--- a/Pages/video edits.html
+++ b/Pages/video edits.html
@@ -71,7 +71,7 @@
 			<li><a href="#"> Portfolios </a>
 				<ul class="dropdown">
 					<li> <a href="photos.html"> Photography </a></li>
-					<li> <a href="video Edits.html"> Video Edits </a></li>
+					<li> <a href="video edits.html"> Video Edits </a></li>
 					<li> <a href="sketches.html"> Drawings &amp; Sketches </a></li>
 					<li> <a href="2D Animation.html"> 2D Animation <br> (Coming Soon)</a></li>
 					<li> <a href="3D Animation Modeling.html"> 3D Animation &amp; Modeling </a></li>
