--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<li><a href="#"> Portfolios </a>
 					<ul class="dropdown">
 						<li> <a href="Pages/photos.html"> Photography </a></li>
-						<li> <a href="Pages/video Edits.html"> Video Edits </a></li>
+						<li> <a href="Pages/video edits.html"> Video Edits </a></li>
 						<li> <a href="Pages/sketches.html"> Drawings &amp; Sketches </a></li>
 						<li> <a href="Pages/2D Animation.html"> 2D Animation<br> (Coming Soon)</a></li>
 						<li> <a href="Pages/3D Animation Modeling.html"> 3D Animation &amp; Modeling </a></li>
@@ -50,7 +50,7 @@
 				<div class="page_right_txt"> <h2 class="page_link_title"> Photography </h2> </div>
 			</div>
 		</a>
-		<a id="vids_html" href="Pages/video Edits.html">
+		<a id="vids_html" href="Pages/video edits.html">
 			<div class="page_link">
 				<div class="page_left_img"> <img src="images/Vid Edit.jpg" height="342" alt=""> </div>
 				<div class="page_right_txt"> <h2 class="page_link_title"> Video Edits </h2> </div>
