--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<header class="header">
 		<!-- Logo IMG-->
-		<img src="images/Logo.PNG" alt="site logo and tag line: D.A.L. Crafts. 
+		<img src="images/Logo.png" alt="site logo and tag line: D.A.L. Crafts. 
 											They said mix media, so I did">
 		<h1 class="title"> D.A.L Crafts </h1>
 	
